// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This proto definition describes the deployment info of a machine LSE (host) in UFS.

syntax = "proto3";

package unifiedfleet.api.v1.models;

option go_package = "infra/unifiedfleet/api/v1/models;ufspb";

import "google/protobuf/timestamp.proto";
import "go.chromium.org/luci/grpc/proto/google/api/field_behavior.proto";

// MachineLSEDeployment includes all info related to deployment of a machine LSE (host).
//
// Next tag: 6
message MachineLSEDeployment {
    // This deployment record will be updated in 3 ways:
    //
    // 1. `shivas add machine`, a deployment record will be added to this machine even if it's
    //    not deployed yet. It usually happens when users add DHCP records for this machine to
    //    verify if it's physically set up well before adding the same hostname into UFS.
    //          hostname: "no-host-yet-<serial_number>"
    //          serial_number: from `shivas add machine`
    //          deployment_identifier: ""
    //          configs_to_push: nil
    //
    // 2. StartActivation phase in Chrome MDM service. When Chrome MDM gots a request from a mac
    //    to activate itself, it will always update back this deployment record no matter whether
    //    there's already a record existing or not. It usually happens when a mac automatically
    //    connects to Google Guest WiFi network in the DC before anyone touches it yet. In this case,
    //    the record here would be:
    //          hostname: "no-host-yet-<serial_number>"
    //          serial_number: from Chrome MDM
    //          deployment_identifier: from Chrome MDM
    //          configs_to_push: from Chrome MDM
    //
    // 3. `shivas add host`, a deployment record will be updated to reflect the real hostname given
    //    by users.
    string hostname = 1;
    // Refer to Machine.serial_number in machine.proto
    string serial_number = 2;
    // Usually it is empty by default.
    // If it's a mac host, the deployment_identifier here refers to the UUID generated by MegaMDM.
    string deployment_identifier = 3;
    // It refers to all configs which is gonna to be pushed to this host.
    repeated Payload configs_to_push = 4;
     // Record the last update timestamp of this host deployment (In UTC timezone)
    google.protobuf.Timestamp update_time = 5 [
        (google.api.field_behavior) = OUTPUT_ONLY];
}

// Payload describes the payload needed in deployment.
//
// Next tag: 3
message Payload {
    // It refers to the unique payload name,
    // e.g. energy_saver, disable_gatekeeper, puppet3_package, ..., etc.
    string name = 1;
    // e.g. PUSH_CONFIG_TYPE_MOBILECONFIG
    PushConfigType config = 2;
    // It refers to a g3 path for a profile, e.g.
    //      //depot/google3/ops/macops/mdm/mega/chrome/profiles/energy_saver.mobileconfig
    // or refers to a server link for a package, e.g.
    //      https://macos-server-1.golo.chromium.org/manifests/clpuppet3.plist
    string path = 3;
}

// Next tag: 3
enum PushConfigType {
    PUSH_CONFIG_TYPE_UNSPECIFIED = 0;
    PUSH_CONFIG_TYPE_MOBILECONFIG = 1;
    PUSH_CONFIG_TYPE_PACKAGE = 2;
}
